# classy-slack-notifier

./: README.md  config.example.yaml  pyproject.toml
ai_docs/: design.md  plan.md
src/classy_slack_notifier/: __main__.py  config.py  filters.py  llm_classifier.py  main.py  models.py  notifier.py  slack_listener.py
systemd/: classy-slack-notifier.service
tests/: test_classifier.py  test_config.py  test_filters.py  test_main.py  test_models.py  test_notifier.py  test_slack_listener.py
